重构项目结构和优化导入路径：1.将i18n系统从locales移至i18n目录 2.重新组织组件文件结构 3.优化工具函数目录结构 4.修复所有导入路径问题 5.将配置集中在config目录

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 ---
 import { Icon } from "astro-icon/components";
 import RyuChanConfig from "../../ryuchan.config";
-import { i18n } from "../locales/translation";
+import { i18n } from "../i18n/translation";
 import I18nKeys from "../locales/keys";
 import { GetCategories, GetTags } from "../utils/content";
 
