--- a/src/components/comment/Giscus.astro
+++ b/src/components/comment/Giscus.astro
@@ -1,5 +1,5 @@
 ---  
-import RyuChanConfig from "../../ryuchan.config";  
+import RyuChanConfig from "../../../ryuchan.config";  
   
 const giscusConfig = RyuChanConfig.giscus;  
 ---  
