--- a/src/components/common/BaseHead.astro
+++ b/src/components/common/BaseHead.astro
@@ -1,8 +1,8 @@
 ---
-import RyuChanConfig from "../../ryuchan.config";
+import RyuChanConfig from "../../../ryuchan.config";
 import GlobalStyles from "./GlobalStyles.astro";
-import ScriptSetup from "./ScriptSetup.astro";
-import SakuraEffect from "./SakuraEffect.astro";
+import ScriptSetup from "../seo/ScriptSetup.astro";
+import SakuraEffect from "../effects/SakuraEffect.astro";
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 ---
