--- a/src/components/effects/SakuraEffect.astro
+++ b/src/components/effects/SakuraEffect.astro
@@ -1,5 +1,5 @@
 ---  
-import RyuChanConfig from "../../ryuchan.config";  
+import RyuChanConfig from "../../../ryuchan.config";  
 ---  
   
 <script define:vars={{ sakuraConfig: RyuChanConfig.sakura || { enable: false } }}>  
