--- a/src/components/layout/Banner.astro
+++ b/src/components/layout/Banner.astro
@@ -1,6 +1,6 @@
 ---
-import RyuChanConfig from "../../ryuchan.config";
-import { GetCoverURLForUnspecifiedEntry } from "../utils/cover";
+import RyuChanConfig from "../../../ryuchan.config";
+import { GetCoverURLForUnspecifiedEntry } from "../../utils/media/cover";
 
 export interface Props {
   title?: string;
