--- a/src/components/layout/NavBar.astro
+++ b/src/components/layout/NavBar.astro
@@ -1,10 +1,10 @@
 ---
-import RyuChanConfig from "../../ryuchan.config";
-import { i18n } from "../i18n/translation";
+import RyuChanConfig from "../../../ryuchan.config";
+import { i18n } from "../../i18n/translation";
 
 import { Icon } from "astro-icon/components";
-import SearchBar from "./interactive/SearchBar.svelte";
-import MobileSearchBar from "./interactive/MobileSearchBar.svelte";
+import SearchBar from "../interactive/SearchBar.svelte";
+import MobileSearchBar from "../interactive/MobileSearchBar.svelte";
 import "astro-pagefind";
 
 const navCount = RyuChanConfig.navigators.length;
