--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,6 @@
 ---
 import RyuChanConfig from "../../ryuchan.config";
-import BaseHead from "../components/BaseHead.astro";
+import BaseHead from "../components/common/BaseHead.astro";
 ---
 
 <html lang={RyuChanConfig.locale}>
