--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -1,8 +1,8 @@
 ---
 import Main from "../layouts/MainLayout.astro";
-import Markdown from "../components/Markdown.astro";
+import Markdown from "../components/post/Markdown.astro";
 import CopyRight from "../components/misc/CopyRight.astro";
-import Giscus from "../components/Giscus.astro";
+import Giscus from "../components/comment/Giscus.astro";
 import { Icon } from "astro-icon/components";
 
 interface Props {
