--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from "astro:content";
-import { IdToSlug } from "../../utils/hash";
+import { IdToSlug } from "../../utils/security/hash";
 import PostLayout from "../../layouts/PostLayout.astro";
 import { render } from "astro:content";
 import { GetSortedPosts } from "../../utils/content";
