--- a/src/pages/categories/index.astro
+++ b/src/pages/categories/index.astro
@@ -1,7 +1,7 @@
 ---
 import ChipLayout from "../../layouts/ChipLayout.astro";
-import I18nKeys from "../../locales/keys";
-import { i18n } from "../../locales/translation";
+import key from "../../i18n/keys";
+import { i18n } from "../../i18n/translation";
 import { GetCategories } from "../../utils/content";
 
 const categories = [...(await GetCategories()).values()].sort();
@@ -14,4 +14,4 @@ const chips = categories.map((category) => {
 });
 ---
 
-<ChipLayout chips={chips} title={i18n(I18nKeys.pages_categories_title)} />
+<ChipLayout chips={chips} title={i18n(key.pages_categories_title)} />
