--- a/src/components/common/GlobalStyles.astro
+++ b/src/components/common/GlobalStyles.astro
@@ -1,8 +1,8 @@
 ---
-import "../styles/animations.css";
-import "../styles/scrollbar.css";
-import "../styles/transitions.css";
-import "../styles/searchbar.css";
+import "../../styles/animations.css";
+import "../../styles/scrollbar.css";
+import "../../styles/transitions.css";
+import "../../styles/searchbar.css";
 import "overlayscrollbars/overlayscrollbars.css";
 ---
 
