--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,11 +1,11 @@
 ---
 import Base from "./BaseLayout.astro";
-import NavBar from "../components/NavBar.astro";
-import Banner from "../components/Banner.astro";
+import NavBar from "../components/layout/NavBar.astro";
+import Banner from "../components/layout/Banner.astro";
 
 import RyuChanConfig from "../../ryuchan.config";
-import Footer from "../components/Footer.astro";
-import SideBar from "../components/SideBar.astro";
+import Footer from "../components/layout/Footer.astro";
+import SideBar from "../components/layout/SideBar.astro";
 
 export interface Props {
   title?: string;
