--- a/src/pages/archive.astro
+++ b/src/pages/archive.astro
@@ -1,7 +1,7 @@
 ---
 import PostArchiveLayout from "../layouts/PostArchiveLayout.astro";
-import I18nKeys from "../locales/keys";
-import { i18n } from "../locales/translation";
+import key from "../i18n/keys";
+import { i18n } from "../i18n/translation";
 import { GetArchives } from "../utils/content";
 
 const archiveMap = await GetArchives();
@@ -9,5 +9,5 @@ const archiveMap = await GetArchives();
 
 <PostArchiveLayout
   archiveMap={archiveMap}
-  title={i18n(I18nKeys.pages_archive_archive)}
+  title={i18n(key.pages_archive_archive)}
 />
