--- a/src/pages/categories/[category].astro
+++ b/src/pages/categories/[category].astro
@@ -1,7 +1,7 @@
 ---
 import PostArchiveLayout from "../../layouts/PostArchiveLayout.astro";
-import I18nKeys from "../../locales/keys";
-import { i18n } from "../../locales/translation";
+import key from "../../i18n/keys";
+import { i18n } from "../../i18n/translation";
 import { GetCategories, type Archive } from "../../utils/content";
 
 export async function getStaticPaths() {
@@ -44,5 +44,5 @@ const { archiveMap, categoryName } = await FormatArchiveMap();
 <PostArchiveLayout
   archiveMap={archiveMap}
   title={categoryName}
-  subTitle={i18n(I18nKeys.pages_categories_archive)}
+  subTitle={i18n(key.pages_categories_archive)}
 />
