--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,7 +1,7 @@
 ---
 import ChipLayout from "../../layouts/ChipLayout.astro";
-import I18nKeys from "../../locales/keys";
-import { i18n } from "../../locales/translation";
+import key from "../../i18n/keys";
+import { i18n } from "../../i18n/translation";
 import { GetTags } from "../../utils/content";
 
 const tags = [...(await GetTags()).values()].sort();
@@ -14,4 +14,4 @@ const chips = tags.map((tag) => {
 });
 ---
 
-<ChipLayout chips={chips} title={i18n(I18nKeys.pages_tags_title)} />
+<ChipLayout chips={chips} title={i18n(key.pages_tags_title)} />
