--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -2,7 +2,7 @@
 import Main from "../layouts/MainLayout.astro";
 import Markdown from "../components/post/Markdown.astro";
 import CopyRight from "../components/misc/CopyRight.astro";
-import Giscus from "../components/comment/Giscus.astro";
+import { CommentSection } from "../components/comment";
 import { Icon } from "astro-icon/components";
 
 interface Props {
@@ -87,8 +87,7 @@ const {
 
   <!-- 评论区 -->
   <div class="comments-wrapper mt-6 mx-3 rounded-2xl bg-[var(--card-color)] px-5 py-6 lg:mx-0 lg:px-10 lg:py-9">
-    <h2 class="text-2xl font-bold mb-4 text-[var(--text-color)]">评论</h2>
-    <Giscus />
+    <CommentSection />
   </div>
 </Main>
 
