--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -4,7 +4,7 @@ import NavBar from "../components/layout/NavBar.astro";
 import Banner from "../components/layout/Banner.astro";
 
 import RyuChanConfig from "../../ryuchan.config";
-import Footer from "../components/layout/Footer.astro";
+import Footer from "../components/Footer.astro";
 import SideBar from "../components/layout/SideBar.astro";
 
 export interface Props {
