添加Umami浏览量统计功能：侧边栏、文章封面和文章版权区域

--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -1,7 +1,7 @@
 ---
 import { Icon } from "astro-icon/components";
 import RyuChanConfig from "../../ryuchan.config";
-import I18nKeys from "../locales/keys";
+import I18nKeys from "../i18n/keys";
 import { i18n } from "../i18n/translation";
 import { GetCategories, GetTags } from "../utils/content";
 import SocialIcon from "./widgets/SocialIcon.astro";
