--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -1,7 +1,7 @@
 ---
 // Component imports
 import Main from "../layouts/MainLayout.astro";
-import PostCard from "../components/PostCard.astro";
+import PostCard from "../components/post/PostCard.astro";
 import Pagination from "../components/controllers/Pagination.astro";
 // Utils
 import type { PaginateFunction } from "astro";
